[package]
name = "pixi2ces"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.0"
rattler_conda_types = "0.26.3"
rattler_lock = "0.22.16"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
